# base_project

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  mypy.ini  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/apidocs/: index.doctree
.doctrees/apidocs/a2_base/: a2_base.doctree  a2_base.entry.doctree
.doctrees/source/: admonitions.doctree  ariel_ideas.doctree  config_steps.doctree  myst_ref.doctree
.github/workflows/: sphinx.yml
_sources/apidocs/a2_base/: a2_base.rst.txt
apidocs/: index.html
apidocs/a2_base/: a2_base.entry.html  a2_base.html
docs/: conf.py  index.md  requirements.txt
docs/_templates/partials/: webfonts.html
docs/apidocs/: index.rst
docs/apidocs/a2_base/: a2_base.entry.rst
source/: admonitions.html  ariel_ideas.html  config_steps.html  myst_ref.html
src/a2_base/: __init__.py  entry.py
