[project]
name = "a2-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JMDM", email = "jmo.880@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
